--- a/TODO.txt
+++ b/TODO.txt
@@ -46,6 +46,8 @@ things I need to do.
 o fix logging so each subprocess output goes to its own logfile (named
   with local and imap user names) o add SSL support
 
+o add UIDPLUS (rfc4315) support
+
 o add proper unix account authentication support
   o it must support no more than three bad auths in 90 seconds
 
