--- a/TODO.txt
+++ b/TODO.txt
@@ -51,6 +51,8 @@ o fix logging so each subprocess output goes to its own logfile (named
 o add proper unix account authentication support
   o it must support no more than three bad auths in 90 seconds
 
+o make COPY command queue'able.
+
 o write tool to split huge mailboxes in to mailbox + sub-mailbox by
   year, keeping the last 1,000 messages in the current folder.
 
