--- a/TODO.txt
+++ b/TODO.txt
@@ -45,6 +45,9 @@ things I need to do.
 
 * add UIDPLUS (rfc4315) support
 
+* write tool to split huge mailboxes in to mailbox + sub-mailbox by
+  year, keeping the last 1,000 messages in the current folder.
+
 o fix logging so each subprocess output goes to its own logfile (named
   with local and imap user names) o add SSL support
 
@@ -52,9 +55,6 @@ o add proper unix account authentication support
   o it must support no more than three bad auths in 90 seconds
 
 o make COPY command queue'able.
-
-o write tool to split huge mailboxes in to mailbox + sub-mailbox by
-  year, keeping the last 1,000 messages in the current folder.
 
 o fix literal+ support
 
