--- a/TODO.txt
+++ b/TODO.txt
@@ -51,6 +51,9 @@ things I need to do.
 o fix logging so each subprocess output goes to its own logfile (named
   with local and imap user names) o add SSL support
 
+o fix RENAME such that we do the db changes ONLY AFTER we actually
+  manage to rename/move the directory.
+
 o add proper unix account authentication support
   o it must support no more than three bad auths in 90 seconds
 
