--- a/TODO.txt
+++ b/TODO.txt
@@ -48,18 +48,27 @@ things I need to do.
 * write tool to split huge mailboxes in to mailbox + sub-mailbox by
   year, keeping the last 1,000 messages in the current folder.
 
-o fix logging so each subprocess output goes to its own logfile (named
-  with local and imap user names) o add SSL support
+* fix logging so each subprocess output goes to its own logfile (named
+  with local and imap user names)
+
+* daemonize properly.
+
+o add proper unix account authentication support
+  o make sure we change to the right user
+  o it must support no more than three bad auths in 90 seconds
+
+o add SSL support
 
 o fix RENAME such that we do the db changes ONLY AFTER we actually
   manage to rename/move the directory.
 
-o add proper unix account authentication support
-  o it must support no more than three bad auths in 90 seconds
-
 o make COPY command queue'able.
 
 o fix literal+ support
+
+o add a better test system so we can run the full server but have it
+  not run as root, and not change to a user upon auth, and have the mail
+  dir exist in a set well known place.
 
 o add command/response tracing facility and hook it into the ability
   to run regression tests against a running server.
