Add a LICENSE file... update our TODO list. Fix the CAPABILITIES list in the initial OK greeting.

--- a/README
+++ b/README
@@ -1,16 +1,17 @@
 'asimap' is a python IMAP server that uses python's mailbox module to
 provide the backing store. This lets us export things like an MH mail
-store via IMAP.
+store via IMAP. Actually the way it is coded right now it ONLY support
+'mailbox.MH' style folders.
 
 We go to various lengths to actually work alongside currently running
-MH clients accessing the same files as the same time.
+MH clients accessing the same files at the same time.
 
-It uses a mutliprocess model where there is a main server process
+It uses a multiprocess model where there is a main server process
 running as root and for any logged in user there is a sub-process
 running as that user. If a user logs in via more than one mail client
 all of their connections will be handled by the same
 sub-process. Sub-processes stick around for a short while after a user
-disconnects to avoid startup time if they connect again within, say, 5
+disconnects to avoid startup time if they connect again within, say, 30
 minutes.
 
 This is not a high performance server being pure python and it is not
